ui/src/styles/globals.css
@import '@mergestat/blocks/styles/main.css';

/*
@tailwind base;
@tailwind components;
@tailwind utilities;
*/

.content-area {
  height: calc(100% - theme('height.14')); /* Nav height is h-14 */
}

/*
.Selectable {
  width: max-content;
}
.Selectable
  .DayPicker-Day--selected:not(.DayPicker-Day--start):not(.DayPicker-Day--end):not(.DayPicker-Day--outside) {
  background-color: #f0f8ff !important;
  color: #4a90e2;
}
.Selectable .DayPicker-Day {
  border-radius: 0 !important;
}
*/


/* TODO(emily): fix override max-h-full class in t-modal styles in blocks */
.t-modal {
  max-height: calc(100vh - 4.8rem);
}

/* TODO(emily): add button styles to blocks */
.t-nav {
  @apply h-auto;
}

.t-nav-item {
  @apply h-11;
}

.t-nav > * + * {
  @apply ml-3
}

.t-nav-item > a,
.t-nav-item > button {
    @apply px-3
           border-0
           rounded-md
           bg-transparent
           gap-3
           font-medium
           inline-flex
           items-center
           h-full
           focus_outline-none
           focus_ring-2
           ring-inset
           focus_ring-blue-500
           hover_bg-gray-600
           cursor-pointer;
}

.t-table-bordered tr:last-child td {
  @apply  border-r
          border-l
          border-b;
}

/* TODO(emily) re-add missing resizer styles to blocks */
.t-resizer {
  cursor: row-resize;
  @apply w-full;
}


/* TODO(emily) adjust styles in blocks */
.t-button-toolbar {
  @apply space-x-3;
}

/* TODO(emily) update classname */
.t-radio-card.t-radio-card-selected {
  @apply bg-blue-50
         text-blue-600
         ring-1
         ring-inset
         ring-blue-500
         border-blue-500
         hover_from-blue-100
         hover_to-blue-100;
}

/* TODO(emily) review avatar setup */
.t-avatar {
  @apply bg-gray-100;
}

.t-avatar-dark {
  @apply bg-gray-500;
}

.t-avatar-primary {
  @apply bg-blue-600;
}

.t-avatar-xl .t-icon {
    @apply w-6
           h-6;
}

/* TODO(emily) fix modal position jump on smaller screens */
.t-modal {
  @apply align-middle;
}

